--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Pillow
 humanize
 hachoir
-pyrogram==2.0.57
+Pyrogram==2.0.106
 TgCrypto
 pymongo==4.0.2
-dnspython
+dnspython==2.3.0
 Flask==2.2.2
 gunicorn==20.1.0
 aiohttp==3.8.1
